2009-04-21	Mike Massonnet
Update documentation

2009-04-20	Mike Massonnet
=== Release 1.0.0 ===

2009-04-19	Mike Massonnet
Add me to the documenters

2009-04-19	Mike Massonnet
Set Help button sensitive in dialog and add code to show the help

	- panel-plugin/Makefile.am:
		Define DATAROOTDIR to be able to point into xfce4/doc.
	- panel-plugin/main.c:
		New callback cb_show_help to run a command that opens the html
		manual file.

2009-04-19	Mike Massonnet
Add documentation

2009-04-18	Mike Massonnet
Add a simple signal for items being added in ClipmanHistory

	- panel-plugin/history.c, panel-plugin/history.h:
		Install a signal item-added in the class. Emit it when a new
		item is added into the history.
	- panel-plugin/main.c(plugin_register):
		Connect to the signal item-added after loading the data.
	- panel-plugin/main.c(cb_status_icon_quit),
	panel-plugin/main.c(cb_status_icon_popup_menu):
		New callback for the Quit item in the status icon popup menu.
		Hide the status icon before leaving the main loop as it can
		take a little moment sometimes.

2009-04-18	Mike Massonnet
Update credits for the translator and previous authors

2009-04-18	Mike Massonnet
Add about dialog

2009-04-16	Mike Massonnet
Init the locale one stage earlier

	- panel-plugin/main.c:
		Call xfce_textdomain() in the preinit callback otherwise the
		error message wouldn't be localisated.


2009-04-16	Mike Massonnet
Prepare for release

2009-04-15	Mike Massonnet
Use a WeakNotify callback... useless but well...

	- panel-plugin/main.c:
		Unref the status icon and move the plugin_save/free calls to a
		WeakNotify callback on the status icon.

2009-04-15	Mike Massonnet
Install autostart file automagically

	- panel-plugin/xfce4-clipman-plugin-autostart.desktop.in,
	panel-plugin/Makefile.am:
		Install a system wide autostart file with Hidden set to true
		by default.
	- panel-plugin/main.c:
		New function install_autostart_file() called after creating